testdata/baselines/reference/compiler/templateLiteralTypeSurrogatePairConcatenation.errors.txt
templateLiteralTypeSurrogatePairConcatenation.ts(9,7): error TS2322: Type '"😀"' is not assignable to type '"\uD83D\uDE00"'.
templateLiteralTypeSurrogatePairConcatenation.ts(10,7): error TS2322: Type '"\uD83D\uDE00"' is not assignable to type '"😀"'.


==== templateLiteralTypeSurrogatePairConcatenation.ts (2 errors) ====
    // Concatenating a lone high surrogate and a lone low surrogate across template
    // literal type fragments forms a surrogate pair, exactly as in a JavaScript
    // string: "\uD83D" + "\uDE00" === "😀". The combined literal type should be
    // "😀", with no leftover lone surrogates.
    type Hi = "\uD83D";
    type Lo = "\uDE00";
    type Pair = `${Hi}${Lo}`;
    
    const p: Pair = "😀";
          ~
!!! error TS2322: Type '"😀"' is not assignable to type '"\uD83D\uDE00"'.
    const q: "😀" = "x" as unknown as Pair;
          ~
!!! error TS2322: Type '"\uD83D\uDE00"' is not assignable to type '"😀"'.
    
    // A non-adjacent boundary must NOT combine: the gap keeps the halves lone.
    type Gapped = `${Hi}-${Lo}`;
    const g: Gapped = "\uD83D-\uDE00";
    